# ai-engineering-field-guide

./: CLAUDE.md  README.md  STYLING.md
job-market/: README.md  analysis.ipynb  pyproject.toml
job-market/_internal/: PIPELINE.md  all_jobs_20260422.csv  all_jobs_20260422_dedup.csv  classify_jobs.py  clean_dedup.ipynb  extract_llm.py  extract_process.md  fix_yaml.py  pipeline_paths.py
job-market/data_raw/: 6988464_OpenAI_Partner_AI_Deployment_Engineer.yaml  7418541_Connor_Group_Digital_Solutions_-_AI_Automation_-_Developer_B.yaml  7439758_Samsara_Senior_Machine_Learning_Engineer_-_Edge_AI.yaml  7630264_Capital_One_Lead_AI_Engineer_AI_Foundations_LLM_Core_and_Age.yaml  7750442_CAST_AI_Senior_Machine_Learning_Engineer_-_AI_Enabler_Team.yaml  7823375_Samsara_Staff_Machine_Learning_Engineer_-_Edge_AI.yaml  7882717_Huron_AI_Engineer.yaml  7925687_Capital_One_Lead_Software_Engineer_DevOps_MLOps_Agentic_Wo.yaml  8248746_Aeris_Communications_Lead_Quality_Development_SDET_Engineer-Gen_AI.yaml  8260152_Pear_VC_Founding_Applied_AI_Product_Engineer.yaml  8332456_Upwork_Lead_AI_Engineer_NLQ_Agentic_Systems.yaml  8344076_Uniphore_Principal_Software_Engineer_JavaGo_with_AI.yaml  8348590_FGS_Global_Integration_Engineer_Microsoft_Graph_Enterpris.yaml  8464497_GSK_AIML_Software_Engineer_AI_for_Science.yaml  8467026_DataRobot_Lead_AI_Solutions_Engineer.yaml  8559594_BlackRock_AI_Enabled_Full_stack_Engineer_Aladdin_Engineerin.yaml  8560201_Zinnia_zinniacom_Sr_Software_Engineer_I_Tech_Lead_NET_AI.yaml  8563664_blp_Applied_AI_Engineer.yaml  8581827_Saviynt_Lead_AI_Engineer.yaml  (+339 more)
(+8066 files in other folders)
